--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Events</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
+							<li><a href="Contactus.html">Contact Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/sastrauniv?lang=en" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
