--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>What is Saarang?</h2>
-									<p>Saarang is an excuisite cultural fest on behalf of Holi.
+									<p>Saarang is an exquisite cultural fest on behalf of Holi.
 										 Saarang presents an opportunity to students from SASTRA to showcase
 										  their talents in the area of Dance, Music and other Arts 
 										  all while keeping the theme of the event colourful just like the festival.
@@ -66,7 +66,7 @@
 										<h2>Vocal Music</h2>
 									</header>
 									<a class="image fit"><img src="images/sing3.jpg" alt="" /></a>
-									<p>Saarang expresses the spirits of joy and vibrance of the festival through the the voices of the young
+									<p>Saarang expresses the spirits of joy and vibrance of the festival through the voices of the young
 										 in the Vocal Music event.</p>
 								</article>
 								<article>
